// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SysCalls: Neo.Native Neo.Native.Deploy 1`] = `"contract.add"`;

exports[`SysCalls: Neo.Native Neo.Native.Deploy 2`] = `
Array [
  Array [
    Object {
      "__$type": "Contract",
      "manifest": ContractManifest {
        "abi": ContractABI {
          "entryPoint": ContractMethodDescriptor {
            "name": "main",
            "parameters": Array [
              ContractParameterDeclaration {
                "name": "operation",
                "serializeWire": [Function],
                "sizeInternal": [Function],
                "type": 7,
              },
              ContractParameterDeclaration {
                "name": "args",
                "serializeWire": [Function],
                "sizeInternal": [Function],
                "type": 16,
              },
            ],
            "returnType": 2,
            "serializeWire": [Function],
            "sizeInternal": [Function],
          },
          "events": Array [],
          "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
          "methods": Array [
            ContractMethodDescriptor {
              "name": "getMaxTransactionsPerBlock",
              "parameters": Array [],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "getMaxBlockSize",
              "parameters": Array [],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "getFeePerByte",
              "parameters": Array [],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "getBlockedAccounts",
              "parameters": Array [],
              "returnType": 16,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "setMaxBlockSize",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "value",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 2,
                },
              ],
              "returnType": 1,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "setMaxTransactionsPerBlock",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "value",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 2,
                },
              ],
              "returnType": 1,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "setFeePerByte",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "value",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 2,
                },
              ],
              "returnType": 1,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "blockAccount",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "account",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 3,
                },
              ],
              "returnType": 1,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "unblockAccount",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "account",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 3,
                },
              ],
              "returnType": 1,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
          ],
          "serializeWire": [Function],
          "sizeInternal": [Function],
        },
        "extra": undefined,
        "features": 0,
        "groups": Array [],
        "hasStorage": false,
        "hashHexInternal": [Function],
        "hashInternal": [Function],
        "maxLength": 2048,
        "payable": false,
        "permissions": Array [
          ContractPermissions {
            "contract": ContractPermissionDescriptor {
              "hashOrGroup": undefined,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            "methods": Array [],
            "serializeWire": [Function],
            "sizeInternal": [Function],
          },
        ],
        "safeMethods": Array [
          "getMaxTransactionsPerBlock",
          "getMaxBlockSize",
          "getFeePerByte",
          "getBlockedAccounts",
        ],
        "serializeWire": [Function],
        "sizeInternal": [Function],
        "trusts": Array [],
      },
      "script": "68114e656f2e4e61746976652e506f6c696379",
    },
  ],
  Array [
    Object {
      "__$type": "Contract",
      "manifest": ContractManifest {
        "abi": ContractABI {
          "entryPoint": ContractMethodDescriptor {
            "name": "main",
            "parameters": Array [
              ContractParameterDeclaration {
                "name": "operation",
                "serializeWire": [Function],
                "sizeInternal": [Function],
                "type": 7,
              },
              ContractParameterDeclaration {
                "name": "args",
                "serializeWire": [Function],
                "sizeInternal": [Function],
                "type": 16,
              },
            ],
            "returnType": 2,
            "serializeWire": [Function],
            "sizeInternal": [Function],
          },
          "events": Array [],
          "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
          "methods": Array [
            ContractMethodDescriptor {
              "name": "getSysFeeAmount",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "index",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 2,
                },
              ],
              "returnType": 7,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "name",
              "parameters": Array [],
              "returnType": 7,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "symbol",
              "parameters": Array [],
              "returnType": 7,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "decimals",
              "parameters": Array [],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "totalSupply",
              "parameters": Array [],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "balanceOf",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "account",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 3,
                },
              ],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "transfer",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "from",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 3,
                },
                ContractParameterDeclaration {
                  "name": "to",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 3,
                },
                ContractParameterDeclaration {
                  "name": "amount",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 2,
                },
              ],
              "returnType": 1,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
          ],
          "serializeWire": [Function],
          "sizeInternal": [Function],
        },
        "extra": undefined,
        "features": 0,
        "groups": Array [],
        "hasStorage": false,
        "hashHexInternal": [Function],
        "hashInternal": [Function],
        "maxLength": 2048,
        "payable": false,
        "permissions": Array [
          ContractPermissions {
            "contract": ContractPermissionDescriptor {
              "hashOrGroup": undefined,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            "methods": Array [],
            "serializeWire": [Function],
            "sizeInternal": [Function],
          },
        ],
        "safeMethods": Array [
          "getSysFeeAmount",
          "name",
          "symbol",
          "decimals",
          "totalSupply",
          "balanceOf",
        ],
        "serializeWire": [Function],
        "sizeInternal": [Function],
        "trusts": Array [],
      },
      "script": "68154e656f2e4e61746976652e546f6b656e732e474153",
    },
  ],
  Array [
    Object {
      "__$type": "Contract",
      "manifest": ContractManifest {
        "abi": ContractABI {
          "entryPoint": ContractMethodDescriptor {
            "name": "main",
            "parameters": Array [
              ContractParameterDeclaration {
                "name": "operation",
                "serializeWire": [Function],
                "sizeInternal": [Function],
                "type": 7,
              },
              ContractParameterDeclaration {
                "name": "args",
                "serializeWire": [Function],
                "sizeInternal": [Function],
                "type": 16,
              },
            ],
            "returnType": 2,
            "serializeWire": [Function],
            "sizeInternal": [Function],
          },
          "events": Array [],
          "hash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
          "methods": Array [
            ContractMethodDescriptor {
              "name": "name",
              "parameters": Array [],
              "returnType": 7,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "symbol",
              "parameters": Array [],
              "returnType": 7,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "decimals",
              "parameters": Array [],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "totalSupply",
              "parameters": Array [],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "balanceOf",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "account",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 3,
                },
              ],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "transfer",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "from",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 3,
                },
                ContractParameterDeclaration {
                  "name": "to",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 3,
                },
                ContractParameterDeclaration {
                  "name": "amount",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 2,
                },
              ],
              "returnType": 1,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
          ],
          "serializeWire": [Function],
          "sizeInternal": [Function],
        },
        "extra": undefined,
        "features": 0,
        "groups": Array [],
        "hasStorage": false,
        "hashHexInternal": [Function],
        "hashInternal": [Function],
        "maxLength": 2048,
        "payable": false,
        "permissions": Array [
          ContractPermissions {
            "contract": ContractPermissionDescriptor {
              "hashOrGroup": undefined,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            "methods": Array [],
            "serializeWire": [Function],
            "sizeInternal": [Function],
          },
        ],
        "safeMethods": Array [
          "name",
          "symbol",
          "decimals",
          "totalSupply",
          "balanceOf",
        ],
        "serializeWire": [Function],
        "sizeInternal": [Function],
        "trusts": Array [],
      },
      "script": "68154e656f2e4e61746976652e546f6b656e732e4e454f",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Deploy 3`] = `"storageItem.add"`;

exports[`SysCalls: Neo.Native Neo.Native.Deploy 4`] = `
Array [
  Array [
    StorageItem {
      "flags": 0,
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "10",
      "serializeWire": [Function],
      "sizeInternal": [Function],
      "value": "000004",
    },
  ],
  Array [
    StorageItem {
      "flags": 0,
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "17",
      "serializeWire": [Function],
      "sizeInternal": [Function],
      "value": "0002",
    },
  ],
  Array [
    StorageItem {
      "flags": 0,
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "0a",
      "serializeWire": [Function],
      "sizeInternal": [Function],
      "value": "e803",
    },
  ],
  Array [
    StorageItem {
      "flags": 0,
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "0f",
      "serializeWire": [Function],
      "sizeInternal": [Function],
      "value": "0000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Deploy 5`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Deploy 6`] = `
Array [
  Array [
    Object {
      "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
      "key": "11",
    },
  ],
  Array [
    Object {
      "hash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
      "key": "11",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Deploy 7`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Deploy 8`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Deploy 9`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Deploy 10`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 1`] = `"storageItem.get"`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 2`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "17",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 3`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 4`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 5`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 6`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 7`] = `"storageItem.get"`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 8`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "10",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 9`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 10`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 11`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 12`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 13`] = `"storageItem.get"`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 14`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "0a",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 15`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 16`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 17`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 18`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 19`] = `"storageItem.get"`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 20`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "0f",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 21`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 22`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 23`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 24`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 25`] = `"storageItem.get"`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 26`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "10",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 27`] = `"storageItem.update"`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 28`] = `
Array [
  Array [
    undefined,
    Object {
      "flags": 0,
      "value": "0a",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 29`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 30`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 31`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 32`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 33`] = `"storageItem.get"`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 34`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "17",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 35`] = `"storageItem.update"`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 36`] = `
Array [
  Array [
    undefined,
    Object {
      "flags": 0,
      "value": "05",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 37`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 38`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 39`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 40`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 41`] = `"storageItem.get"`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 42`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "0a",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 43`] = `"storageItem.update"`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 44`] = `
Array [
  Array [
    undefined,
    Object {
      "flags": 0,
      "value": "0a",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 45`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 46`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 47`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 48`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 49`] = `"storageItem.get"`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 50`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "0f",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 51`] = `"storageItem.update"`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 52`] = `
Array [
  Array [
    Object {
      "value": "0000000000000000000000000000000000000000",
    },
    Object {
      "flags": 0,
      "value": "00000000000000000000000000000000000000000101010101010101010101010101010101010101",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 53`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 54`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 55`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 56`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 57`] = `"storageItem.get"`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 58`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "0f",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 59`] = `"storageItem.update"`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 60`] = `
Array [
  Array [
    Object {
      "value": "0101010101010101010101010101010101010101",
    },
    Object {
      "flags": 0,
      "value": "0101010101010101010101010101010101010101",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 61`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 62`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 63`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Policy 64`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 1`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 2`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 3`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 4`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 5`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 6`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 7`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 8`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 9`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 10`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 11`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 12`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 13`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 14`] = `
Array [
  Array [
    Object {
      "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
      "key": "11",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 15`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 16`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 17`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 18`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 19`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 20`] = `
Array [
  Array [
    Object {
      "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
      "key": "200101010101010101010101010101010101010101",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 21`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 22`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 23`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 24`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 25`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 26`] = `
Array [
  Array [
    Object {
      "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
      "key": "1505",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 27`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 28`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 29`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 30`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 31`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 32`] = `
Array [
  Array [
    Object {
      "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
      "key": "1505",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 33`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 34`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 35`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 36`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 37`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 38`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 39`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 40`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 41`] = `"contract.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 42`] = `
Array [
  Array [
    Object {
      "hash": "0000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 43`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 44`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 45`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 46`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 47`] = `"contract.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 48`] = `
Array [
  Array [
    Object {
      "hash": "0000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 49`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 50`] = `
Array [
  Array [
    Object {
      "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
      "key": "203775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 51`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "scriptHash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 52`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 53`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 54`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 55`] = `"contract.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 56`] = `
Array [
  Array [
    Object {
      "hash": "0000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 57`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 58`] = `
Array [
  Array [
    Object {
      "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
      "key": "203775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 59`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 60`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 61`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 62`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 63`] = `"contract.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 64`] = `
Array [
  Array [
    Object {
      "hash": "0000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 65`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 66`] = `
Array [
  Array [
    Object {
      "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
      "key": "203775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 67`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 68`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 69`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 70`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 71`] = `"contract.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 72`] = `
Array [
  Array [
    Object {
      "hash": "3775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 73`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 74`] = `
Array [
  Array [
    Object {
      "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
      "key": "203775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 75`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "scriptHash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 76`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 77`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 78`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 79`] = `"contract.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 80`] = `
Array [
  Array [
    Object {
      "hash": "0000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 81`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 82`] = `
Array [
  Array [
    Object {
      "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
      "key": "203775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
  Array [
    Object {
      "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
      "key": "200000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 83`] = `"storageItem.delete"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 84`] = `
Array [
  Array [
    Object {
      "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
      "key": "203775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 85`] = `"storageItem.add"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 86`] = `
Array [
  Array [
    StorageItem {
      "flags": 0,
      "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
      "key": "200000000000000000000000000000000000000000",
      "serializeWire": [Function],
      "sizeInternal": [Function],
      "value": "05",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 87`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "scriptHash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 88`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 89`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 90`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 91`] = `"contract.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 92`] = `
Array [
  Array [
    Object {
      "hash": "0000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 93`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 94`] = `
Array [
  Array [
    Object {
      "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
      "key": "203775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
  Array [
    Object {
      "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
      "key": "200000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 95`] = `"storageItem.update"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 96`] = `
Array [
  Array [
    Object {
      "value": "5",
    },
    Object {
      "flags": 0,
      "value": "02",
    },
  ],
  Array [
    Object {
      "value": "14",
    },
    Object {
      "flags": 0,
      "value": "11",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 97`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "scriptHash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 98`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 99`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.GAS 100`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 1`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 2`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 3`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 4`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 5`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 6`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 7`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 8`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 9`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 10`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 11`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 12`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 13`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 14`] = `
Array [
  Array [
    Object {
      "hash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
      "key": "11",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 15`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 16`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 17`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 18`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 19`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 20`] = `
Array [
  Array [
    Object {
      "hash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
      "key": "200101010101010101010101010101010101010101",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 21`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 22`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 23`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 24`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 25`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 26`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 27`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 28`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 29`] = `"contract.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 30`] = `
Array [
  Array [
    Object {
      "hash": "0000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 31`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 32`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 33`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 34`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 35`] = `"contract.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 36`] = `
Array [
  Array [
    Object {
      "hash": "0000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 37`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 38`] = `
Array [
  Array [
    Object {
      "hash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
      "key": "203775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 39`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "scriptHash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 40`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 41`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 42`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 43`] = `"contract.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 44`] = `
Array [
  Array [
    Object {
      "hash": "0000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 45`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 46`] = `
Array [
  Array [
    Object {
      "hash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
      "key": "203775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 47`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 48`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 49`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 50`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 51`] = `"contract.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 52`] = `
Array [
  Array [
    Object {
      "hash": "0000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 53`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 54`] = `
Array [
  Array [
    Object {
      "hash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
      "key": "203775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 55`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 56`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 57`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 58`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 59`] = `"contract.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 60`] = `
Array [
  Array [
    Object {
      "hash": "3775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 61`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 62`] = `
Array [
  Array [
    Object {
      "hash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
      "key": "203775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 63`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "scriptHash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 64`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 65`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 66`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 67`] = `"contract.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 68`] = `
Array [
  Array [
    Object {
      "hash": "0000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 69`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 70`] = `
Array [
  Array [
    Object {
      "hash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
      "key": "203775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
  Array [
    Object {
      "hash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
      "key": "200000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 71`] = `"storageItem.delete"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 72`] = `
Array [
  Array [
    Object {
      "hash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
      "key": "203775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 73`] = `"storageItem.add"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 74`] = `
Array [
  Array [
    StorageItem {
      "flags": 0,
      "hash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
      "key": "200000000000000000000000000000000000000000",
      "serializeWire": [Function],
      "sizeInternal": [Function],
      "value": "05",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 75`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "scriptHash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 76`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 77`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 78`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 79`] = `"contract.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 80`] = `
Array [
  Array [
    Object {
      "hash": "0000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 81`] = `"storageItem.tryGet"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 82`] = `
Array [
  Array [
    Object {
      "hash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
      "key": "203775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
  Array [
    Object {
      "hash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
      "key": "200000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 83`] = `"storageItem.update"`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 84`] = `
Array [
  Array [
    Object {
      "value": "5",
    },
    Object {
      "flags": 0,
      "value": "02",
    },
  ],
  Array [
    Object {
      "value": "14",
    },
    Object {
      "flags": 0,
      "value": "11",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 85`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "scriptHash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
    },
  ],
]
`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 86`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 87`] = `Array []`;

exports[`SysCalls: Neo.Native Neo.Native.Tokens.NEO 88`] = `Array []`;
